--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,7 +15,17 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="4" column="1">
+    <item row="1" column="0">
+     <widget class="QTextBrowser" name="tb_laps"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="pb_lap">
+      <property name="text">
+       <string>Lap</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="2">
      <widget class="QPushButton" name="pb_exit">
       <property name="text">
        <string>Exit</string>
@@ -29,13 +39,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QTextEdit" name="te_lps">
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="0">
      <widget class="QPushButton" name="pb_startstop">
       <property name="text">
@@ -43,14 +46,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="pb_lap">
-      <property name="text">
-       <string>Lap</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
+    <item row="5" column="0">
      <widget class="QPushButton" name="pb_clear">
       <property name="text">
        <string>Clear</string>
@@ -86,6 +82,22 @@
     <hint type="destinationlabel">
      <x>192</x>
      <y>218</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pb_clear</sender>
+   <signal>clicked()</signal>
+   <receiver>tb_laps</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>151</x>
+     <y>395</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>151</x>
+     <y>185</y>
     </hint>
    </hints>
   </connection>
